--- a/intranet/htdocs/intranet-tmpl/checkBrowser.tmpl
+++ b/intranet/htdocs/intranet-tmpl/checkBrowser.tmpl
@@ -18,7 +18,8 @@
         <a href="http://www.apple.com/es/safari/download/" target="_blank"><img alt="Safari" src="[% temas %]/[% user_theme_intra %]/includes/images/safari_logo.png" /></a>
         <a href="http://windows.microsoft.com/es-XL/internet-explorer/downloads/ie" target="_blank"><img alt="Internet Explorer" src="[% temas %]/[% user_theme_intra %]/includes/images/internet_explorer_logo.png" /></a>
         <input type="hidden" name="acepto_browser" value="1" />
-        <p><input type="submit" value="Aceptar" /></p>
+        <p>Si no quiere actualizar su navegador en este momento, puede continuar navegando MERAN.</p>
+        <p><input type="submit" value="[% 'Seguir utilizando MERAN' | i18n %]" /></p>
     </form>
 </div>
 </body>
