--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuarioResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuarioResult.tmpl
@@ -98,7 +98,7 @@
                           [% od %]
                       </td>
                       <td align="center">
-                      <span class="[% clase %]"><b>[% regular %]</b></span>
+                      <span class="[% clase %]"><b>[% socio.esRegularToString %]</b></span>
                       </td>
             
                 </tr>
