switch de getCamposXLike nuevamente a subcampo

--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -75,9 +75,9 @@
                             <img name="cover"  VALUE="" BORDER=0 src="/uploads/covers/[% portada_registro %]" title="Portada">
                         </a>
                     [% ELSE %]
-                          <img src="/uploads/covers/no_image.jpg" 
-                                alt="[% 'Sin Portada' | i18n %]"
-                                title="[% 'Sin Portada' | i18n %]" />
+                          <img src="/uploads/covers/no_image_[% cat_ref_tipo_nivel3 %].jpg" 
+                                alt="[% 'Sin Portada para' | i18n %]&nbsp;[% cat_ref_tipo_nivel3 %]"
+                                title="[% 'Sin Portada para' | i18n %]&nbsp;[% cat_ref_tipo_nivel3 %]" />
                     [% END %]
                     </td>
 
