--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/menu.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/menu.css
@@ -1172,3 +1172,10 @@
 	height: auto;
 	width: 240px;
 }
+
+.head{
+    border: 1px solid #cccccc;
+    background: url("images/ui-bg_highlight-soft_75_ffe45c_1x100.png") repeat-x;
+    font-weight: bold;
+    color: #1c94c4;
+}
