--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detallePrestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detallePrestamos.tmpl
@@ -122,12 +122,11 @@
 		        [% PERL %]
 		            print C4::AR::Filtros::to_Icon(  
 		                                                boton   => "icon_renovar",
-                                                        onClick => "realizarAccion('RENOVACION','chkboxPrestamos',generaDivRenovacion);",
+		                                                onClick => "realizarAccion('RENOVACION','table_tablaPrestamos',generaDivRenovacion);",
 		                                                title   => "[% 'Renovar' | i18n %]",
 		                                                alternClass => "botonCentrado"
 		                    ) ;
 		        [% END %]
-<!--                                                        onClick => "realizarAccion('RENOVACION','table_tablaPrestamos',generaDivRenovacion);", -->
 			[% END %]
 		
 		</fieldset>
