--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -925,6 +925,7 @@ li {
 	float: left;
 }
 
+
 .icon_warning {
 	background: transparent url(../imagenes/iconos/warning.png) no-repeat;
 	height: 25px;
@@ -1000,6 +1001,14 @@ li {
 	width: 25px;
 	cursor: pointer;
 }
+
+.icon_exportar {
+    background: transparent url(../imagenes/iconos/exportar.png) no-repeat;
+    height: 25px;
+    width: 25px;
+    cursor: pointer;
+}
+
 
 .icon_buscar {
 	background: transparent url(../imagenes/iconos/buscar.png) no-repeat;
@@ -1504,8 +1513,8 @@ fieldset.accionesUsuarios {
 	background: url("images/fondo_label.png") repeat-x scroll 0 0 transparent;
     height: 36px;
     max-width: 427;
-	margin-left: -20px;
-    margin-top: -4px;
+	margin-left: -17px;
+    margin-top: 9px;
 	
 }
 
