--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -75,7 +75,7 @@
                             <img name="cover"  VALUE="" BORDER=0 src="/uploads/covers/[% portada_registro %]" title="Portada">
                         </a>
                     [% ELSE %]
-                          <img src="/uploads/covers/no_image_[% cat_ref_tipo_nivel3 %].jpg" 
+                          <img src="/uploads/covers/[% cat_ref_tipo_nivel3 %].png" 
                                 alt="[% 'Sin Portada para' | i18n %]&nbsp;[% cat_ref_tipo_nivel3 %]"
                                 title="[% 'Sin Portada para' | i18n %]&nbsp;[% cat_ref_tipo_nivel3 %]" />
                     [% END %]
