--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -4605,12 +4605,12 @@ background-color:#E7F3FA;
 
 /*hover de las tablas con checkbox*/
 .impar:hover {
-    background:   #CCFFCC;
+    background:   #5C82B5;
     color:   #000000;
 }
 
 .par:hover {
-    background:   #CCFFCC;
+    background:   #5C82B5;
     color:   #000000;
 }
 
