--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -4605,13 +4605,19 @@ background-color:#E7F3FA;
 
 /*hover de las tablas con checkbox*/
 .impar:hover {
-    background:   #5C82B5;
-    color:   #000000;
+    background:         #5C82B5;
+    color:              #000000;
+    user-select:        none; /* CSS3 */
+    -moz-user-select:   none; /* Gecko (Firefox) */
+    -khtml-user-select: none; /* Webkit (Safari, Chrome) */
 }
 
 .par:hover {
-    background:   #5C82B5;
-    color:   #000000;
+    background:         #5C82B5;
+    color:              #000000;
+    user-select:        none; /* CSS3 */
+    -moz-user-select:   none; /* Gecko (Firefox) */
+    -khtml-user-select: none; /* Webkit (Safari, Chrome) */
 }
 
 .par.marked {
