--- a/intranet/htdocs/intranet-tmpl/reports/inventory-sig-top.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/inventory-sig-top.tmpl
@@ -17,6 +17,28 @@
     }
 
 
+    function generarVariasEtiquetas(){
+                var selectedItems = new Array();
+                $('#checkEjemplares:checked').each(function(){
+                                                      selectedItems.push($(this).val());
+                                                });
+                                                
+                if (selectedItems.length == 0) {
+                      jAlert('Debe seleccionar al menos un ejemplar','Advertencia de catalogo');
+                } else {  
+                    var id1= selectedItems[0];
+                    var id2= selectedItems[selectedItems.length - 1];
+                    window.open (URL_PREFIX+"/catalogacion/barcode_gen.pl?token="+token+"&id1="+id1+"&id2="+id2,"width=650,height=550,status=no,location=no,menubar=no,personalbar=no,resizable=no,scrollbars=no");
+                }
+    }
+
+
+    function generarEtiqueta(id3,barcode){
+        window.open (URL_PREFIX+"/catalogacion/barcode_gen.pl?token="+token+"&id="+id3, "Barcode "+barcode,"width=650,height=550,status=no,location=no,menubar=no,personalbar=no,resizable=no,scrollbars=no");
+    }
+
+
+
     function consultarPorBarcode(){
     
         //se busca por barcode
@@ -241,6 +263,7 @@
 <fieldset>
     <legend class="titulo_legend">[% "Buscar nro. inventario: &nbsp;" | i18n %]</legend>
         <ul>
+              
             <li class="sub_item">
               <label for="barcode">Nro. Inventario</label>
               <input type="text" id="barcode" value="[% barcode %]">
