--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -1509,6 +1509,7 @@ fieldset.accionesUsuarios {
 	border: none;
 	color: #FFF9E7;
 	font-family: Arial, Helvetica, sans-serif;
+	padding-right: 20px;
 /* Nuevo, con el acabado abrazador. Si no gusta, sacar desde acá para abajo */ 
 	background: url("images/fondo_label.png") repeat-x scroll 0 0 transparent;
     height: 36px;
