--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/menu.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/menu.css
@@ -168,8 +168,8 @@
 
 .ui-state-hover,.ui-widget-content .ui-state-hover,.ui-widget-header .ui-state-hover,.ui-state-focus,.ui-widget-content .ui-state-focus,.ui-widget-header .ui-state-focus
 	{
-	border: 1px solid #fbcb09;
-	background: #fdf5ce url(images/verde-hover.png) 50% 50%
+	border: 1px solid transparent;
+	background: url(images/menu-h-hover.png) 50% 50%
 		repeat-x;
 	font-weight: bold;
 	color: #c77405;
@@ -183,7 +183,7 @@
 .ui-state-active,.ui-widget-content .ui-state-active,.ui-widget-header .ui-state-active
 	{
 	border: 1px solid #35414F;
-	background: #ffffff url(images/ui-bg_glass_65_ffffff_1x400.png) 50% 50%
+	background: #ffffff url(images/menu-h.png) 50% 50%
 		repeat-x;
 	font-weight: bold;
 	color: red;
